--- a/energy-class-app/package.json
+++ b/energy-class-app/package.json
@@ -7,6 +7,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.0",
     "@mui/material": "^5.13.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
