--- a/energy-class-app/public/manifest.json
+++ b/energy-class-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "iHabitation",
+  "name": "Audit iHabitation",
   "icons": [
     {
       "src": "favicon.ico",
