--- a/energy-class-app/package.json
+++ b/energy-class-app/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "framer-motion": "^12.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
